# L1AnalysisAutomation

./: .gitignore  LINKS.md
00-inbox/: event-system-architecture.md  pipeline-architecture-india.md  pipeline-architecture.md  prd-guide.md
10-observations/: _index.md  obs-data-extraction.md  obs-document-ingestion-classification.md  obs-elixir-trigger-bridge.md  obs-fund-classification.md  obs-fund-dashboard-ui.md  obs-fund-deep-research.md  obs-gemini-usage-patterns.md  obs-infrastructure-dormant-out-of-scope.md  obs-key-personnel-intelligence.md  obs-knowledge-agent-chat.md  obs-l1-analysis.md  obs-people-deep-research.md  obs-scoring-rubric.md  obs-sec-filing-diligence.md  obs-web-research-providers.md
20-process-maps/: _index.md  proc-data-extraction.md  proc-deal-analysis-pipeline.md  proc-document-ingestion-classification.md  proc-elixir-trigger-bridge.md  proc-fund-classification.md  proc-fund-dashboard-ui.md  proc-fund-deep-research.md  (+9 more)
engine/: README.md  pyproject.toml  pytest.ini
engine/criteria/default/: criteria.yaml  set.yaml
engine/l1/: __init__.py  artifacts.py  claude_runner.py  cli.py  criteria.py  diligence_sources.py  errors.py  fsutil.py  memo_checks.py  pdf.py  quoteverify.py  run.py  telemetry.py  testcriterion.py  unresolved.py
engine/l1/stages/: __init__.py  classification.py  common.py  diligence.py  extraction.py  memo.py  scoring.py
engine/tests/: conftest.py  test_exit_codes.py  test_invariants.py  test_neo_deck.py  test_quote_verification.py  test_retry.py  test_scoring_memo.py  test_telemetry.py  test_test_criterion.py
(+46 files in other folders)
