[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "l1-analysis-engine"
version = "0.1.0"
description = "L1 Analysis Engine — fund marketing document to evidence-grounded IC memo"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
    "pypdf>=4.0",
]

[project.scripts]
l1 = "l1.cli:main"

[tool.setuptools.packages.find]
include = ["l1*"]
